[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.poetry]
name = "managed-services-integration-tests"
version = "1.0"
description = "managed-services-integration-tests"
authors = ["managed-services-integration-tests"]
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.9"
pytest-progress = "==1.2.5"                             # https://github.com/ssrikanta/pytest-progress
openshift-python-wrapper = "^4.15.13"
docker = "^7.0.0"
colorlog = "^6.7.0"
openshift-cluster-management-python-wrapper = "^1.0.27"
openshift-python-wrapper-data-collector = "^1.0.4"
pytest = "^7.4.0"
pytest-testconfig = "^0.2.0"
hvac = "^2.0.0"
pytz = "^2023.3"
pip = "^23.1.2"
pyyaml = "^6.0"
pytest-dependency = "^0.6.0"
pytest-order = "^1.1.0"
shortuuid = "^1.0.11"
redhat-qe-cloud-tools = "^1.0.9"
boto3 = "^1.28.1"
rosa-python-client = "^1.0.16"
python-simple-logger = "^1.0.5"
packaging = "^23.1"
pyaml-env = "^1.2.1"
openshift-cli-installer = "^2.0.0"
openshift-python-utilities = "^5.0.4"
timeout-sampler = "^0.0.1"

[tool.poetry.dev-dependencies]
ipdb = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
